# htmd

./: .gitignore  Cargo.toml
benches/: README.md  bench.ts  bench_avg.sh  convert_bench.rs  package.json  plot_results.py  program.md  pyproject.toml  results.tsv
examples/wikipedia/: Cargo.toml
examples/wikipedia/src/: main.rs
src/: dom_walker.rs  lib.rs  text_util.rs
src/element_handler/: anchor.rs  mod.rs  table.rs
tests/: basic_tests.rs  link_tests.rs  table_tests.rs
